--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,8 +29,8 @@
         <footer>
       <span class="footer">
         <a class="footerlink" routerLink="" routerLinkActive="true">Home</a> |
-        <a class="footerlink" routerLink="impressum" routerLinkActive="true">Impressum</a> |
-        <a class="footerlink" routerLink="privacy" routerLinkActive="true">Datenschutz</a>
+        <a class="footerlink" href="https://chapek9.org/impressum">Impressum</a> |
+        <a class="footerlink" href="https://chapek9.org/privacy">Datenschutz</a> |
       </span>
         </footer>
 
