--- a/src/app/modules/pose/pose-recorder/pose-recorder.component.scss
+++ b/src/app/modules/pose/pose-recorder/pose-recorder.component.scss
@@ -3,22 +3,22 @@
     height: 240px;
     background-color: #ccd9cc;
 }
+.receiverContainer{
+    width: 320px;
+    height: 240px;
+    background-color: #ccd9cc;
+}
+video{
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    float: left;
+    position: absolute;
+}
 .videoOverlay {
     width: 320px;
     height: 240px;
     float:left;
     position: absolute;
-    z-index:-1000;
-}
-
-.receiverContainer{
-     width: 320px;
-     height: 240px;
-     background-color: #ccd9cc;
-}
-video{
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
 }
 .canvas{
   background-color: #6e6e6e;
@@ -29,3 +29,11 @@ video{
 .btnLabel {
     font-size: 12px;
 }
+/*
+.btnOn {
+    color: #3282b8;
+}
+.btnOff {
+    color: black;
+}
+*/
